# mslang-proxy

./: CMakeLists.txt
.github/: copilot-instructions.md  git-commit-instructions.md
src/mslang_proxy/private/: mslang_proxy.cpp  mslang_proxy_emscripten.cpp
src/mslang_proxy/public/: mslang_proxy.h
